2 add  commit